edit resource search
